# advertising

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
migrations/2023-05-07-172100_create_adverts/: up.sql
src/: lib.rs  main.rs  openapi.rs  setting.rs
src/api/: advert.rs  error.rs  mod.rs
src/api/controller/: advert.rs
src/api/dto/: advert.rs  mod.rs
src/domain/: error.rs
src/domain/model/: advert.rs
src/domain/repository/: advert.rs  mod.rs
src/infrastructure/: mod.rs  schema.rs
src/infrastructure/database/: postgres.rs
src/infrastructure/model/: advert.rs
src/infrastructure/repository/: postgres.rs
src/infrastructure/repository/postgres/: advert.rs  mod.rs
src/service/: advert.rs
