[package]
name = "advertising"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenvy = "0.15"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1", features = ["postgres", "chrono", "r2d2"] }
chrono = { version = "0.4", features = ["serde"] }
rusty-money = { version = "0.4", features = ["iso"] }
env_logger = "0.10"
thiserror = "1.0"
